--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
+    },
     "autoload": {
         "psr-0": {
             "Xi\\Collections": ["library/", "tests/"]
